# StealthTerm

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: app.rs  event.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: connections.rs  credentials.rs  encrypted_history.rs  i18n.rs  import_export.rs  keybindings.rs  lib.rs  master_password.rs  settings.rs  snippets.rs
crates/sftp/: Cargo.toml
crates/sftp/src/: client.rs  lib.rs  transfer.rs  zmodem.rs  zmodem_detect.rs  zmodem_session.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: client.rs  config.rs  encoding.rs  lib.rs  proxy.rs  session.rs  session_manager.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: buffer.rs  cell.rs  command_fold.rs  completion.rs  emulator.rs  grid.rs  lib.rs  parser.rs  pty.rs  renderer.rs  search.rs  selection.rs
crates/ui/: Cargo.toml
crates/ui/src/: icons.rs  lib.rs
crates/ui/src/panels/: connection_panel.rs  mod.rs  role_dashboard.rs  settings_panel.rs  sftp_panel.rs  terminal_panel.rs  transfer_queue_panel.rs
crates/ui/src/theme/: catppuccin.rs  dracula.rs  mod.rs  monokai.rs  one_dark.rs  solarized_dark.rs  tokyo_night.rs
crates/ui/src/widgets/: command_palette.rs  emoji_button.rs  input_area.rs  mod.rs  paste_confirm_dialog.rs  search_bar.rs  server_monitor.rs  sidebar.rs  snippet_picker.rs  split_pane.rs  status_bar.rs  tab_bar.rs  terminal_view.rs
crates/utils/: Cargo.toml
crates/utils/src/: history.rs  lib.rs
pkg/: stealthterm.desktop
pkg/windows/: setup.iss  stealthterm.wxs
