[package]
name = "stealthterm-config"
version.workspace = true
edition.workspace = true

[dependencies]
stealthterm-utils = { path = "../utils" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
aes-gcm = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
encoding_rs = { workspace = true }
regex = { workspace = true }
zeroize = { workspace = true }
