[package]
name = "stealthterm-sftp"
version.workspace = true
edition.workspace = true

[dependencies]
stealthterm-ssh = { path = "../ssh" }
stealthterm-config = { path = "../config" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
russh = { workspace = true }
russh-sftp = "2.0"
zmodem2 = "0.5"
